moved dashboard partial to layouts folder

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
   </div>   
   <% if user_signed_in? %>
       <div class="container-fluid">
-      <%= yield %>
+        <%= render "layouts/dashboard" %>
       </div>
       <% else %>
         <div id="main">
