--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -1,3 +1,4 @@
+    <h1> this is map/get.html.erb </h1>
         <header class="jumbotron subhead" id="overview">
             <h1>Welcome, let's get started. </h1>
             <p class="lead">Make staying prepared for wildfire fun and easy.</p>
@@ -79,40 +80,3 @@
                     </div>     
     </section>  
 </div>
-
-<!-- <section id="task-section">     
-        <h2>Last Summer, over 1300 homes were destroyed in Bastrop County due to wildfire.</h2>
-        <p>
-        We don’t want that to happen to you. We’ve developed an easy-to-use application that brings together a variety of checklists and fire tools, and gives them to you in a manageable, timely, and actionable form.
-        <p>
-        <div class="task-butt"><%= link_to '<i class="icon-info-sign icon-white"></i> Read more about prepared.ly >>'.html_safe,  about_path, :class => 'btn-large btn-info btn' %></div>
-        </br>
-        </div>
-        <h2>
-              Want to start getting more prepared <em>right now</em>?  
-        </h2>
-        <p> Click here to go start browsing through things you can do to make your home more prepared.</p>
-</section>
-<section id="account-section"> 
-            <h2>Account Section </h2>
-            <p>
-            <strong>Help us make it better.</strong> We’re piloting the application in Austin, Texas. If you're a resident of Austin or Travis County, please fill it out <a href="../survey">our survey</a> and we’ll use the information you give us to make it work better. We appreciate your time and your input helps us develop a tool that will work for you. 
-            <br>
-             <a href="../survey">Fill out the survey >></a>
-            </p>            
-</section>
-            <h5>
-            <br><strong>Prepared.ly is</strong> a project created by Code for Ameria for the City of Austin and Travis County. Austin is one of 8 cities participating in the 2013 city program, and the Code for America 
-            Austin Team is collaborating with the Austin Fire Department, and the City of Austin to create 
-            Prepared.ly, a tool to help homeowners be more prepared for wildfires. 
-            </h5>
-</section>
-<section id="notify-section"> 
-            <h5>
-            <br><strong>Prepared.ly is</strong> a project created by Code for Ameria for the City of Austin and Travis County. Austin is one of 8 cities participating in the 2013 city program, and the Code for America 
-            Austin Team is collaborating with the Austin Fire Department, and the City of Austin to create 
-            Prepared.ly, a tool to help homeowners be more prepared for wildfires. 
-            </h5>
-</section>      
--->
-
