--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -1,13 +1,7 @@
 <% if user_signed_in? %>
-  <li>
-  <%= link_to('logout', destroy_user_session_path, :method => :delete) %>        
-  </li>
+	<li><%= link_to('edit registration', edit_user_registration_path) %></li>
+	<li><%= link_to('logout', destroy_user_session_path, :method => :delete) %></li>
 <% else %>
-  <li>
-  <%= link_to('login', new_user_session_path)  %>  
-  </li>
-  <li>          
-  	<a data-toggle="modal" href="#signin" >Sign in Modal</a>
-  </li>
+	<li><%= link_to('Register', new_user_registration_path)  %></li>
+	<li><a data-toggle="modal" href="#signin" >Sign in</a></li>
 <% end %>
-
