--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,48 +23,29 @@
         </a>
         <% if user_signed_in? %> <!--show logo in nav for signed in users -->
             <a class="brand" href="#"><img src="/assets/preparedly-nav-blue.png" width="119px" height="20px"></a>
-        <% end %>    
-          <div class="nav-collapse">
-                <ul class="nav navbar-items pull-right">
-                  <li class=""><a href="/"> home</a></li>
-                  <li><%= link_to "learn", resources_path %></li> 
-                  <li><%= link_to "about", about_path %></li>
-                  <li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                  <li><%= render 'devise/menu/registration_items' %></li>
-                  <li><%= render 'devise/menu/login_items' %></li>
-                      </ul>
-                    </li>
-                </ul>
-          </div><!--/.nav-collapse -->
+        <% end %>  
+        <div class="nav-collapse">
+          <ul class="nav navbar-items pull-right">
+            <li class=""><a href="/"> home</a></li>
+            <li><%= link_to "learn", resources_path %></li> 
+            <li><%= link_to "about", about_path %></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= render 'devise/menu/login_items' %></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
   </div>
 
-<!-- login modal content -->
-<div id="signin" class="modal hide fade">
-  <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal">&times;</button>
-      <h3>Modal Heading</h3>
-  </div>
-  <div class="modal-body">
-      <%= render :partial => "devise/sessions/new" %>
-      
-  </div>  
-</div>
-<!-- end login  modal content -->
 <div class="container" id="main-wrap">      
-  <div id="beta">
-  </div>   
-
-
- 
-        <div id="main">
-         
-            <%= yield %>
-  
-</div>
+  <div id="beta"></div>   
+  <div id="main">       
+    <%= yield %>
+  </div>
 </div>
 
 <div id="footer">
@@ -77,51 +58,51 @@
 					</a>
 				</div>
 				<div class="column-3">
-
 					<a href="http://www.codeforamerica.org">
 					<img title="cfa austin" src="/assets/cfaaustin.png">
 					</a>
-					</div>
+				</div>
 				<div class="column-3">
 					<a href="http://austintexas.gov/"><img title="austin" src="/assets/austin.png" height=200px width=200px></a>
 				</div>
 			</div>
-			<div class="column-wrapper column-full">
-						<p> <a href="mailto:info@prepared.ly"> contact us </a>  &#124; 
-						<a href="../resources">check out our resources, and partners </a>  &#124; 
-            <a data-toggle="modal" href="#terms">review our terms of use here</a>
-					</p>
+		  <div class="column-wrapper column-full">
+  			<p><a href="mailto:info@prepared.ly"> contact us </a>  &#124; 
+  			<a href="../resources">check out our resources, and partners </a>  &#124; 
+        <a data-toggle="modal" href="#terms">review our terms of use here</a></p>
 			</div>		
 		</div>
 	</div>
+	<div id="footer-bottom"><!-- not sure why this div never gets closed but the footer doesn't work otherwise -->
+</div>
 
-	<div id="footer-bottom">
-	</div>
-       <div id="terms" class="modal hide fade">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h3>Terms of Use</h3>
-            </div>
-            <div class="modal-body">
-              <h4>Prepared.ly is a non-emergency wildfire preparedness tool.</h4><br> 
-              <p>Registration allows you to share prevention strategies with other users, contact wildfire prevention specialists, and receive infrequent <strong>non-emergency</strong> alerts about wildfire prevention in your area. Information entered on this site will be securely stored, and only used for the above purposes and to improve Prepared.ly. Changes to this policy will be posted here. By accessing and using Prepared.ly as a registered user or without registering, you acknowledge and agree to the above and any revisions.</p>
-            </div>
-            <div class="modal-footer">
-              <a href="#" class="btn" data-dismiss="modal" >Close</a>
-            </div>
-          </div>
-                    <div id="signin" class="modal hide fade">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h3>Sign in</h3>
-            </div>
-            <div class="modal-body">
-              <h4>Sign in</h4>               
-            </div>
-            <p> put login content here </p>
-             <div class="modal-footer">
-              <a href="#" class="btn" data-dismiss="modal">Close</a>
-            </div> 
+<!-- modal stuff -->
+<div id="terms" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <h3>Terms of Use</h3>
+  </div>
+  <div class="modal-body">
+    <h4>Prepared.ly is a non-emergency wildfire preparedness tool.</h4><br> 
+    <p>Registration allows you to share prevention strategies with other users, contact wildfire prevention specialists, and receive infrequent <strong>non-emergency</strong> alerts about wildfire prevention in your area. Information entered on this site will be securely stored, and only used for the above purposes and to improve Prepared.ly. Changes to this policy will be posted here. By accessing and using Prepared.ly as a registered user or without registering, you acknowledge and agree to the above and any revisions.</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal" >Close</a>
+  </div>
+</div>
+<div id="signin" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <h3>Sign in</h3>
+      <div class="modal-body">
+        <p> <%= render :partial => 'devise/sessions/login' %> </p> 
+      </div>
+  </div>  
+</div>
+<div class="modal-footer">
+  <a href="#" class="btn" data-dismiss="modal">Close</a>
+</div> 
+
 
 
 <!-- Typekit -->
