--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
 			</div>		
 		</div>
 	</div>
-	<div id="footer-bottom"><!-- not sure why this div never gets closed but the footer doesn't work otherwise -->
+	<div id="footer-bottom">
 </div>
 
 <!-- modal stuff -->
@@ -98,11 +98,10 @@
         <p> <%= render :partial => 'devise/sessions/login' %> </p> 
       </div>
   </div>  
-</div>
 <div class="modal-footer">
   <a href="#" class="btn" data-dismiss="modal">Close</a>
 </div> 
-
+</div>
 
 
 <!-- Typekit -->
