--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -10,7 +10,8 @@
             <div class="triangle-top-box">
                 <h2>On the scale, this is:</h2>
                 <p><%= @random.difficulty %></p>
-                <img src="assets/easy.png">
+                <div class ="easy">
+                </div>
             </div>  
             <div class="triangle-top">
             </div>       
