Schedule email reminders in same way as text reminders

--- a/app/views/user_mailer/reminder_email.html.erb
+++ b/app/views/user_mailer/reminder_email.html.erb
@@ -8,10 +8,7 @@
     <p><%= image_tag attachments['preparedly-red.png'].url -%></p>
     <p><h2>Don't forget your Prepared.ly task:</h2></p>
     <ol>
-      <li><p><%= @task.task %></li>
-      <li><p><%= @task.difficulty %></li>
-      <li><p><%= @task.fact %></li>
-      <li><p><%= @task.detail %></li>
+      <li><p>TASKS AND STUFF GO HERE</li>
     </ol>
 
   </body>
