Make sure correct values display in email task reminder

--- a/app/views/user_mailer/reminder_email.html.erb
+++ b/app/views/user_mailer/reminder_email.html.erb
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- might need to content_type "multipart/mixed" since delayed job is handling it -->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
     <p><%= image_tag attachments['preparedly-red.png'].url -%></p>
     <p><h2>Don't forget your Prepared.ly task:</h2></p>
     <ol>
-      <li><p>TASKS AND STUFF GO HERE</li>
+      <li><p><%= @message %></li></p>
     </ol>
-
+  <p><a href="<%= @signin %>">Sign in</a> to Prepared.ly to manage your reminders and mark this one as complete</p> 
   </body>
 </html>
