--- a/app/views/user_mailer/reminder_email.text.erb
+++ b/app/views/user_mailer/reminder_email.text.erb
@@ -1,2 +1,4 @@
 Your Prepared.ly reminder!
 ===============================================
+Don't forget to: <%= @message %>
+Sign in to Prepared.ly to manage your reminders and mark this one as complete: <%= @signin %>
