remove old remind method from tasks controller, add notice to user that reminder was scheduled

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -4,6 +4,7 @@
         <div class="container-fluid">
             <div class="span9">
                 <div class="tab-content">
+                    <%= notice %>
    
 <!-- //////////////////// Map ///////////////////////// -->        
                         <section id="map-section" class="tab-pane"> 
