comment comments at top of application.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,8 +10,8 @@
  *
  *= require_self
 */
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/* They will automatically be included in application.css.
+  You can use Sass (SCSS) here: http://sass-lang.com/ */
 
 /* =============================================================================
    HTML5 Boilerplate CSS: h5bp.com/css
